@@ -6,7 +6,7 @@
  *   DESCRIPTION
  *      implementation of libpqxx exception classes
  *
- * Copyright (c) 2005, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2005-2006, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -14,6 +14,8 @@
  *
  *-------------------------------------------------------------------------
  */
+#include "pqxx/compiler-internal.hxx"
+
 #include "pqxx/except"
 
 using namespace PGSTD;
